--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -542,7 +542,7 @@ input, select{
     }
 }
 @media (max-width: 575px){
-    .mw100px, .mw150px, .flex-w100{
+    .mw100px, .mw150px, .flex-w100, .mw240px{
         width: 100%;
         max-width: 100%;
     }
