--- a/scss/_pages/_map.scss
+++ b/scss/_pages/_map.scss
@@ -161,7 +161,7 @@
         &::after {
             width: 14px;
             height: 14px;
-            top: calc(50% - 7px);
+            top: 17px;
             right: 8px;
             line-height: 14px;
         }
