--- a/scss/_components/_base.scss
+++ b/scss/_components/_base.scss
@@ -77,6 +77,7 @@ input, select{
         box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, .25);
     }
 }
+
 .table__btn{
     position: relative;
     min-width: 115px;
@@ -94,84 +95,13 @@ input, select{
         left: 14px;
     }
     &:hover{
-        background-color:#fc8800;
+        background-color:$color_primary;
         color: #fff;
+        i:before{
+            background-color:#fff;
+        }
     }
 }
-
-.icon-dots{
-    display: inline-block;
-    width: 23px;
-    height: 6px;
-    -webkit-mask-image: url(../img/3dots.svg);
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-size: 100% 100%;
-    background-color: #666666;
-    &:before{
-        display: none;
-    }
-}
-.ic-maker-map{
-    display: inline-block;
-    width: 17px;
-    height: 26px;
-    background: url(../img/map-marker.svg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    pointer-events: none;
-    position: relative;
-    top: -3px;
-}
-.ic-duong{
-    display: inline-block;
-    width: 20px;
-    height: 23px;
-    -webkit-mask-image: url(../img/duong.svg);
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-size: 100% 100%;
-    pointer-events: none;
-    background-color: #666666;
-    position: relative;
-    top: -2px;
-}
-.ic-search{
-    display: inline-block;
-    width: 14px;
-    height: 15px!important;
-    -webkit-mask-image: url(../img/search.svg);
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-size: 100% 100%;
-    background: #fff;
-    pointer-events: none;
-    position: relative;
-    top: -2px;
-}
-
-.ic-plus-circle-white{
-    display: inline-block;
-    width: 22px;
-    height: 22px!important;
-    background: #fff;
-    border-radius: 50%;
-    pointer-events: none;
-    position: relative;
-    top: -2px;
-    &:before{
-        content: '';
-        position: absolute;
-        top: calc( 50% - 4px);
-        left: calc( 50% - 4px);
-        width: 8px;
-        height: 8px;
-        -webkit-mask-image: url(../img/plus.svg);
-        -webkit-mask-repeat: no-repeat;
-        -webkit-mask-size: 100% 100%;
-        background: $color_primary;
-    }
-}
-
-
-
 .checkbox__fake{display:block;position:relative;padding-left:20px;margin-bottom:12px;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}
 .checkbox__fake input{position:absolute;opacity:0;cursor:pointer;height:0;width:0}
 .checkmark{position:absolute;top:0;left:0;height:16px;width:16px;background-color:#fff;border:1px solid #CCCCCC;border-radius:4px}
@@ -242,26 +172,40 @@ input, select{
         border-color: $color_secondary;
     }
     &.-arrow-right{
-        &::after {
-            content: "\e900";
-            font-family: 'icomoon';
+        // &::after {
+        //     content: "\e900";
+        //     font-family: 'icomoon';
+        //     position: absolute;
+        //     top: 17px;
+        //     right: 18px;
+        //     display: flex;
+        //     align-items: center;
+        //     justify-content: center;
+        //     font-size: 6px;
+        //     font-weight: 400;
+        //     width: 24px;
+        //     height: 24px;
+        //     border-radius: 50%;
+        //     background: #fff;
+        //     color: #fc8800;
+        //     text-align: center;
+        //     line-height: 22px;
+        //     text-indent: 3px;
+        // }
+        .ic-angle-right{
             position: absolute;
             top: 17px;
             right: 18px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 6px;
-            font-weight: 400;
+            background-color: #fff;
             width: 24px;
             height: 24px;
             border-radius: 50%;
-            background: #fff;
-            color: #fc8800;
-            text-align: center;
-            line-height: 22px;
-            text-indent: 3px;
-
+            &:before{
+                top: -2px;
+                width: 3px;
+                height: 5px;
+                background-color: $color_primary;
+            }
         }
         &:hover{
             &::after {
@@ -371,6 +315,14 @@ input, select{
                 position: relative;
                 left: 0;
                 font-size: 12px;
+                top: auto;
+                transform: none;
+                &.ic-user{
+                    &:before{
+                        width: 15px;
+                        height: 15px;
+                    }
+                }
             }
         }
         &.-mask{
@@ -395,32 +347,58 @@ input, select{
             left: 17px;
             font-size: 18px;
             color: $color_primary;
+            &:before{
+                background-color: $color_primary;
+            }
+            &.ic-data-capture::before {
+                width: 13px;
+                height: 17px;
+            }
+            &.ic-map{
+                &::before {
+                    width: 19px;
+                    height: 21px;
+                }
+            }
         }
         &:hover{
             background: $color_primary;
             color: #fff;
             i{
                 color: #fff;
+                &:before{
+                    background-color: #fff;
+                }
+
             }
         }
         &.-modal{
             color: #666;
             &::before{
-                content: "\e900";
-                font-family: 'icomoon';
+                content: "";
                 position: absolute;
+                top: calc(50% - 4px);
                 left: 15px;
-                font-size: 6px;
-                color: $color_primary;
+                display: inline-block;
+                -webkit-mask-repeat: no-repeat;
+                -webkit-mask-position: center;
+                -webkit-mask-size: contain;
+                width: 7px;
+                height: 8px;
+                -webkit-mask-image: url(../img/icon-angle-right.svg);
+                background-color:$color_primary;
             }
             &:hover{
                 color: #fff;
                 &::before{
                     color: #fff;
+                    background-color:#fff;
                 }
             }
         }
     }
+
+
     @media (max-width: 1199px){
 
     }
@@ -444,7 +422,15 @@ input, select{
         }
     }
 }
+.form-control{
+    &.-medium{
+        min-height: 42px;
+    }
+}
 
+.gap-20{
+    gap: 20px
+}
 .alert{
     border: 2px solid transparent;
     border-radius: 0;
@@ -471,6 +457,10 @@ input, select{
                 pointer-events: none;
             }
         }
+    }
+    @media (max-width: 575px){
+        font-size: 12px;
+        padding: 15px 12px;
     }
 }
 
@@ -512,6 +502,9 @@ input, select{
     width: 100%;
     max-width: 310px;
 }
+.minw15px{
+    min-width: 15px;
+}
 .minw100px{
     min-width: 100px;
 }
@@ -542,7 +535,7 @@ input, select{
     }
 }
 @media (max-width: 575px){
-    .mw100px, .mw150px, .flex-w100, .mw240px{
+    .mw100px, .mw150px, .flex-w100, .mw240px, .mw170px{
         width: 100%;
         max-width: 100%;
     }
