--- a/scss/_components/_menu.scss
+++ b/scss/_components/_menu.scss
@@ -50,6 +50,9 @@
 
         &>li:hover a, &>li.active a{
             color:$color_primary;
+            i:before{
+                background-color: $color_primary;
+            }
         }
         &>li.active a{
             font-weight: 700;
@@ -101,8 +104,25 @@
                     font-weight: 400;
                     text-align: center;
                     margin: 0 auto 8px;
-                    &.icon-dots {
-                        font-size: 6px;
+                    &.ic-dots:before {
+                        width: 24px;
+                        height: 26px;
+                    }
+                    &.ic-home:before{
+                        width: 25px;
+                        height: 25px;
+                    }
+                    &.ic-appraisal:before{
+                        width: 27px;
+                        height: 27px;
+                    }
+                    &.ic-user:before{
+                        width: 25px;
+                        height: 26px;
+                    }
+                    &.ic-bar-chart:before{
+                        width: 27px;
+                        height: 26px;
                     }
                 }
                 &:hover{
@@ -113,7 +133,7 @@
                 &>a{
                     color: $color_primary;
                 }
-                .icon-dots{
+                i:before{
                     background-color: $color_primary;
                 }
             }
