--- a/scss/_pages/_login.scss
+++ b/scss/_pages/_login.scss
@@ -70,6 +70,14 @@
 						position: relative;
 						top: 1px;
 						color: $color_primary;
+						&.ic-angle-right-circle{
+							&::before {
+								top: 0;
+								width: 15px;
+								height: 15px;
+								background-color: $color_primary;
+							}
+						}
 					}
 					&:hover{
 						color: $color_primary;
