--- a/scss/_pages/_singlefunction.scss
+++ b/scss/_pages/_singlefunction.scss
@@ -42,9 +42,19 @@
 				top: 1px;
 				font-weight: 400;
 				color: $color_primary;
+				&.ic-angle-right-circle{
+
+					&:before{
+						top: 0;
+						width: 15px;
+						height: 15px;
+						background-color: $color_primary;
+					}
+				}
 			}
 			&:hover{
 				color: $color_primary;
+
 			}
 		}
 	}
