--- a/scss/_pages/_user-input.scss
+++ b/scss/_pages/_user-input.scss
@@ -3,6 +3,7 @@
 		max-width: 600px;
 		margin: 0 auto;
 		padding: 36px 0;
+
 	}
 	&__logo {
 	    display: block;
@@ -40,6 +41,10 @@
 		    	text-decoration: underline;
 		    }
 	    }
+	    input{
+	    	font-size: 12px;
+	    }
+
 	    .el__footer{
 	    	border-top: 1px solid #CCCCCC;
 	    	.btn{
