--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
 @import "../fonts/YuGothic/stylesheet.css";
-@import "../fonts/icomoon/style.css";
+// @import "../fonts/icomoon/style.css";
 
 @import "../libs/bootstrap/css/bootstrap.css";
 @import "_components/base";
@@ -10,6 +10,7 @@
 // @import "_components/footer";
 @import "_components/menu";
 @import "_components/general";
+@import "_components/icon";
 
 // Page
 @import "_pages/login";
