--- a/scss/_components/_menu.scss
+++ b/scss/_components/_menu.scss
@@ -104,23 +104,23 @@
                     font-weight: 400;
                     text-align: center;
                     margin: 0 auto 8px;
-                    &.ic-dots:before {
+                    &.icon-dots:before {
                         width: 24px;
                         height: 26px;
                     }
-                    &.ic-home:before{
+                    &.icon-home:before{
                         width: 25px;
                         height: 25px;
                     }
-                    &.ic-appraisal:before{
+                    &.icon-appraisal:before{
                         width: 27px;
                         height: 27px;
                     }
-                    &.ic-user:before{
+                    &.icon-user:before{
                         width: 25px;
                         height: 26px;
                     }
-                    &.ic-bar-chart:before{
+                    &.icon-bar-chart:before{
                         width: 27px;
                         height: 26px;
                     }
