--- a/scss/_pages/_login.scss
+++ b/scss/_pages/_login.scss
@@ -70,7 +70,7 @@
 						position: relative;
 						top: 1px;
 						color: $color_primary;
-						&.ic-angle-right-circle{
+						&.icon-angle-right-circle{
 							&::before {
 								top: 0;
 								width: 15px;
