--- a/scss/_pages/_map.scss
+++ b/scss/_pages/_map.scss
@@ -343,7 +343,7 @@
 @media (max-width: 575px){
 
     .sc__box__header{
-        .ic-duong{
+        .icon-duong{
             top: 2px;
         }
     }
