--- a/scss/_pages/_singlefunction.scss
+++ b/scss/_pages/_singlefunction.scss
@@ -42,7 +42,7 @@
 				top: 1px;
 				font-weight: 400;
 				color: $color_primary;
-				&.ic-angle-right-circle{
+				&.icon-angle-right-circle{
 
 					&:before{
 						top: 0;
