--- a/scss/_pages/_user-input.scss
+++ b/scss/_pages/_user-input.scss
@@ -31,10 +31,16 @@
 	    	padding: 8px 0;
 	    }
 	    .form-check{
+
 	    	&-input {
 			    width: 22px;
 			    height: 22px;
 			    margin-top: 0;
+			    cursor: pointer;
+			    &:checked {
+				    background-color: #fc8800;
+				    border-color: #fc8800;
+				}
 			}
 			a{
 		    	color: #51A1B9;
