--- a/scss/_pages/_singlefunction.scss
+++ b/scss/_pages/_singlefunction.scss
@@ -75,7 +75,7 @@
 			transition: all .3s;
 	        &::after {
 	            content: "";
-	            -webkit-mask-image: url(../img/angle-right-circle.svg);
+	            -webkit-mask-image: url(../img/icon-angle-right-circle2.svg);
 	            -webkit-mask-repeat: no-repeat;
 	            -webkit-mask-size: 100% 100%;
 	            background-size: 5px;
