--- a/scss/_pages/_map.scss
+++ b/scss/_pages/_map.scss
@@ -104,7 +104,7 @@
         }
     }
     &__iframe{
-        height: 485px;
+        height: 455px;
         img{
             width: 100%;
             height: 100%;
@@ -118,7 +118,7 @@
         width: 30px;
         height: 30px;
         z-index: 1;
-        background: url(../img/maker.svg) no-repeat;
+        background: url(../img/icon-pin.svg) no-repeat;
         background-position: center;
         background-size:contain;
         cursor: pointer;
@@ -197,7 +197,7 @@
                 left: 10px;
                 width: 11px;
                 height: 11px;
-                background: url(../img/plus-circle.svg);
+                background: url(../img/icon-plus-circle.svg);
                 background-repeat: no-repeat;
                 background-size: contain;
                 pointer-events: none;
@@ -207,12 +207,24 @@
 }
 
 .bmodal__list{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    font-size: 12px;
     li{
         align-items: center;
 
         border-bottom: 1px solid #F1F1F1;
         &>*{
-            padding: 18px 0;
+            padding: 16px 0;
+        }
+        .-li-w100{
+            flex: 0 0 auto;
+            width: 100px;
+        }
+        .-li-w120{
+            flex: 0 0 auto;
+            width: 120px;
         }
         .-li-w220{
             flex: 0 0 auto;
@@ -253,7 +265,7 @@
                 left: 20px;
                 width: 14px;
                 height: 15px;
-                background: url(../img/search.svg);
+                background: url(../img/icon-search.svg);
                 background-repeat: no-repeat;
                 background-size: contain;
                 pointer-events: none;
@@ -343,7 +355,7 @@
 @media (max-width: 575px){
 
     .sc__box__header{
-        .icon-duong{
+        .icon-road{
             top: 2px;
         }
     }
@@ -365,7 +377,7 @@
             &>*{
                 padding: 12px 0;
             }
-            .-li-w220 {
+            .-li-w100,.-li-w120, .-li-w220 {
                 flex: 0 0 auto;
                 width: 100%;
                 background: #F1F0F1;
